@@ -53,6 +53,10 @@ gtk2perl_quit_add_callback_invoke (GPerlCallback * callback)
 
 MODULE = Gtk2		PACKAGE = Gtk2		PREFIX = gtk_
 
+=for object Gtk2::main
+
+=cut
+
 BOOT:
 	{
 	/* include some files autogenerated by Makefile.PL. */
